--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "common",
+  "name": "@otaku-tekkurai/common",
   "version": "0.0.0",
   "sideEffects": false,
   "author": "hand-dot",
